// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image should emit load event after image loaded 1`] = `
<div>
  <div
    class="rc-image rc-image--block"
  >
    <img
      alt="img"
      class="rc-image__img"
      src="https://img.com"
      style="object-fit: fill;"
    />
  </div>
</div>
`;

exports[`Image should watch src and reset 1`] = `
<div>
  <div
    class="rc-image rc-image--block"
  />
</div>
`;
